title above nav on mobile

--- a/sass/bandolf/_variables.scss
+++ b/sass/bandolf/_variables.scss
@@ -372,7 +372,7 @@ $navbar-default-border:            transparent !default;
 $navbar-default-link-color:                #aaa !default;
 $navbar-default-link-hover-color:          #fff !default;
 $navbar-default-link-hover-bg:             transparent !default;
-$navbar-default-link-active-color:         #ccc !default;
+$navbar-default-link-active-color:         #fff !default;
 $navbar-default-link-active-bg:            transparent !default;
 $navbar-default-link-disabled-color:       #888 !default;
 $navbar-default-link-disabled-bg:          transparent !default;
