--- a/sass/bandolf/_layout.scss
+++ b/sass/bandolf/_layout.scss
@@ -49,12 +49,12 @@ body {
   }
 }
 .home .content-area>section {
-  ul {
+  >ul {
     padding: 0;
     margin-top: 0;
     margin-bottom:0;
     @extend .container;
-    li {
+    .widget {
       list-style: none;
       padding: 60px 15px 60px;
     }
