--- a/sass/bandolf/default.scss
+++ b/sass/bandolf/default.scss
@@ -1,3 +1,139 @@
 @import "variables.scss";
 @import "bootstrap.scss";
 @import "layout";
+
+body {
+	background-image: url("../images/bg-bandolf.png");
+	background-position: top;
+	background-attachment: fixed;
+	background-size: cover;
+	font-family: Raleway;
+}
+
+/**
+ * Glow effect
+ */
+.text-glow  {
+	text-shadow: 0 0 0 #00FAFF, 0 0 7px #fff, 0 0 0 #00FF2E;
+	transition: text-shadow 1s;
+}
+.text-glow-hover:hover  {
+	text-shadow: -2px -1px 8px #00FAFF, 0 0 10px #fff, 3px 3px 9px #00FF2E;
+	transition: text-shadow 1s;
+}
+.site-header .navbar-minimal {
+	border-top: none;
+}
+.site-header nav {
+	margin: 0;
+		background: transparent;
+		padding: 10px 0;
+		transition: background 500ms, padding 1s;
+	a {
+		font-family: primusdemo;
+		font-size: 20px;
+		@extend .text-glow-hover;
+	}
+}
+.site-header nav.compact {
+	position: fixed;
+	width: 100%;
+	z-index: 1;
+		background: rgba(51, 51, 51, 0.8);
+		padding: 0px 0;
+		transition: background 500ms, padding 1s;
+}
+
+.site-header nav .navbar-brand a {
+	color: #fff;
+	font-size: 30px;
+	@extend .text-glow;
+}
+
+.site-header nav .navbar-nav > li > a:focus {
+	color: #aaa;
+}
+
+// Famous Titles for $400
+.entry-title, .widgettitle {
+	font-family: primusdemo;
+}
+.home {
+	.widgettitle {
+		//text-align: center;
+	}
+}
+.textwidget {
+	font-size: 16px;
+	@extend .clearfix;
+	ul {
+		margin-bottom: 10px;
+	}
+}
+
+#hero-widgets {
+	.textwidget {
+		text-shadow: -1px -1px #333, 2px 2px 6px #000; // for light colored background images
+		@extend .lead;
+	}
+}
+
+#get-started {
+	display: block;
+	text-align: center;
+	font-size: 40px;
+	color: #fff;
+	@extend .text-glow, .text-glow-hover;
+}
+
+#home-widgets, #home-widgets-2, #colophon {
+	background: #111;
+}
+#home-widgets-1 {
+	background: rgba(0, 0, 0, 0.5);
+}
+#home-widgets-3 {
+	background: rgba(0, 0, 0, 0.8);
+}
+
+/**
+ * Other pages
+ */
+
+body:not(.home) {
+	#content {
+		background: #efefef;
+		color: #333;
+	}
+}
+body:not(.single) {
+  article:nth-child(even) {
+  background: #F8F8F8;
+  }
+  article:nth-child(odd) {
+    background: #fdfdfd;
+  }
+}
+body:not(.home) {
+  #primary {
+    box-shadow: 0 0 4px #959595;
+  }
+}
+.entry-header {
+	border-bottom: 1px solid #ddd;
+}
+
+/**
+ * Footer
+ */
+.widget {
+	list-style: none;
+}
+
+/**
+ * Images
+ */
+
+.textwidget img {
+	@extend .img-responsive;
+}
