--- a/sass/wordpress/wordpress_generated.scss
+++ b/sass/wordpress/wordpress_generated.scss
@@ -41,8 +41,8 @@ a img.aligncenter {
 }
 
 .wp-caption {
-    background: #fff;
-    border: 1px solid #f0f0f0;
+    background-color: rgba(255,255,255, .1);
+    border: 1px solid rgba(0,0,0, .2);
     max-width: 96%; /* Image does not overflow the content area */
     padding: 5px 3px 10px;
     text-align: center;
