--- a/sass/wordpress/wordpress_generated.scss
+++ b/sass/wordpress/wordpress_generated.scss
@@ -64,7 +64,7 @@ a img.aligncenter {
     border: 0 none;
     height: auto;
     margin: 0;
-    max-width: 98.5%;
+    // max-width: 98.5%; // made image off center.
     padding: 0;
     width: auto;
 }
@@ -73,7 +73,7 @@ a img.aligncenter {
     font-size: 11px;
     line-height: 17px;
     margin: 0;
-    padding: 0 4px 5px;
+    padding: 3px 4px 5px;
 }
 
 /* Text meant only for screen readers. */
